# ros-python-wheels

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  WHEEL_BUILDING.md  build_python_artifacts.py  build_python_package.py  build_wheels_local.py  list_dependencies.py  list_dependencies_catkin.py  pyproject.toml  requirements.txt  test_build_order.py
.github/workflows/: test-ros-wheels-alpine.yml  test-ros-wheels-matrix.yml
docker/test/: ros_wheels_p311_alpine_jazzy.dockerfile  ros_wheels_p311_slim_jazzy.dockerfile  ros_wheels_p312_alpine_jazzy.dockerfile  ros_wheels_p312_slim_jazzy.dockerfile  ros_wheels_ubuntu24_jazzy.dockerfile
examples/pub_sub/: README.md  minimal_publisher.py  minimal_subscriber.py  pyproject.toml  setup.sh
patches/jazzy/: rclpy.patch  rosidl_generator_py.patch
patches/kilted/: iceoryx_posh.patch  rclpy.patch  rmw_test_fixture_implementation.patch  rosidl_generator_py.patch
ros-wheels-bootstrapper/: ros_wheels_bootstrapper.pth  setup.py
ros-wheels-bootstrapper/ros_wheels_bootstrapper/: __init__.py
ros_python_wheels/: __init__.py  build_artifacts.py  build_wheels.py  list_deps.py  upload_wheels.py  utils.py
ros_wheel_builder/: build.py  dependency_resolver.py  distro.py  file_gen.py  main.py  ros_distro.py  upload.py
ros_wheel_builder/templates/cpp_pkg/: pyproject.toml.j2  repair_wheel.sh  repair_wheel.sh.j2  setup.py.j2
ros_wheel_builder/templates/meta_pkg/: setup.py.j2
scripts/: build.py  run_all.py  run_all.sh  run_rclpy_tests.sh  show_deps.py  upload.py
